LPS-107613 Add appropriate styles to the toolbar buttons to provide correct text alignment

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentsEditorToolbar.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentsEditorToolbar.scss
@@ -27,6 +27,8 @@
 
 	button {
 		color: #6b6c7e;
+		margin-left: 0.25rem;
+		margin-right: 0.25rem;
 	}
 
 	button.btn-primary {
